Fixes with buttons and overflows

--- a/news/src/app/layout/article/article.component.css
+++ b/news/src/app/layout/article/article.component.css
@@ -25,13 +25,26 @@
     background-color:rgba(0, 0, 0, 0.8);
 }
 
+.overlay-content{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.overflow{
+  max-height: 75%;
+  overflow: auto;
+}
+
 .source{
-    font-size: 14px;
-    position: absolute;
-    bottom: 12px;
-    left: 10px;
-    text-decoration: none;
-    color: white;
+
+    /*font-size: 14px;*/
+    /*position: absolute;*/
+    /*bottom: 12px;*/
+    /*left: 10px;*/
+    /*text-decoration: none;*/
+    /*color: white;*/
 }
 .h4{
 
@@ -52,7 +65,8 @@
 
 }
 .publish-date{
-    position: absolute;
-    bottom: 10px;
-    right: 20px;
+
+    /*position: absolute;*/
+    /*bottom: 10px;*/
+    /*right: 20px;*/
 }
