--- a/news/src/app/layout/search/search.component.css
+++ b/news/src/app/layout/search/search.component.css
@@ -1,7 +1,7 @@
 input{
     font-size: 14px;
     font-weight: 600;
-    width: 95%;
+    width: 90%;
     font-family: Arial, Helvetica, sans-serif;
     border-width: 0;
     padding: 0.5rem;
@@ -20,50 +20,74 @@ input{
     border-radius: 0.5rem;
 }
 
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+mat-form-field{
+  max-width: 90%;
+}
+
+.my-form-field .mat-form-field-wrapper {
+  margin-bottom: -1.25em;
+}
+
 button{
-    width: 90%;
-    display: inline-block;
-    margin-right: 0.5rem;
-    color: white;
-    padding: 10px 20px;
-    font-size: 14px;
-    margin-bottom: 10px;
-    border-radius: 10px;
+  height: fit-content;
+  background-color: #252C68;
+  color: white;
+  width: fit-content;
+  border: 0;
+  padding: 10px 20px;
+  border-radius: 6px;
+
 }
+
 button:hover{
-    color: rgb(195, 194, 194);
-}
-.right-buttons{
-    width: 25%;
-
-    margin-top: 2%;
-    display: flex;
-    justify-content: space-between;
-    height: 40%;
+  color: wheat;
 }
 
-.bottom-row{
-    margin-left: 0.5rem;
-    margin-right: 3rem;
-    display: flex;
-    justify-content: space-between;
+mat-button{
+  color: white;
 }
 
+/*button:hover{*/
+/*    color: rgb(195, 194, 194);*/
+/*}*/
+/*.right-buttons{*/
+/*    width: 25%;*/
+
+/*    margin-top: 2%;*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    height: 40%;*/
+/*}*/
+
+/*.bottom-row{*/
+/*    margin-left: 0.5rem;*/
+/*    margin-right: 3rem;*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*}*/
 
 
-@media only screen and (max-width: 768px) {
-    .bottom-row{
-        display:block;
-        margin: 2%;
 
-    }
-    .right-buttons{
-        width: 100%;
-    }
-    button{
-        margin-bottom: 2%;
-        margin-left: 2%;
-        margin-right: 2%;
-    }
-}
+/*@media only screen and (max-width: 768px) {*/
+/*    .bottom-row{*/
+/*        display:block;*/
+/*        margin: 2%;*/
+
+/*    }*/
+/*    .right-buttons{*/
+/*        width: 100%;*/
+/*    }*/
+/*    button{*/
+/*        margin-bottom: 2%;*/
+/*        margin-left: 2%;*/
+/*        margin-right: 2%;*/
+/*    }*/
+/*}*/
 
